[tool.poetry]
name = "crypto-trade-bot"
version = "0.1.0"
description = "Bot de trading de criptomoedas avançado com arquitetura modular"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
# Frameworks e ferramentas core
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
pydantic = {extras = ["email"], version = "^2.4.2"}
pydantic-settings = "^2.0.3"
httpx = "^0.25.0"
websockets = "^11.0.3"
asyncio = "^3.4.3"
python-dotenv = "^1.0.0"

# Integração com Exchanges
ccxt = "^4.0.0"
ccxtpro = "^0.5.7"

# Processamento de dados e análise
pandas = "^2.1.1"
numpy = "^1.26.0"
polars = "^0.19.12"
scipy = "^1.11.3"
statsmodels = "^0.14.0"
scikit-learn = "^1.3.1"
ta-lib = "^0.4.28"
pycaret = "^3.1.0"

# Machine Learning
torch = "^2.1.0"
pytorch-lightning = "^2.1.0"
ray = {extras = ["rllib"], version = "^2.6.3"}
gymnasium = "^0.29.1"

# Comunicação e mensageria
celery = "^5.3.4"
redis = "^5.0.1"
kafka-python = "^2.0.2"
confluent-kafka = "^2.2.0"

# Banco de dados
sqlalchemy = "^2.0.22"
asyncpg = "^0.28.0"
psycopg2-binary = "^2.9.9"
alembic = "^1.12.0"

# Monitoramento e observabilidade
prometheus-client = "^0.17.1"
opentelemetry-api = "^1.20.0"
opentelemetry-sdk = "^1.20.0"
opentelemetry-exporter-prometheus = "^1.20.0"
structlog = "^23.2.0"

# Segurança
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"

[tool.poetry.group.dev.dependencies]
# Qualidade de código e formatação
black = "^23.10.0"
isort = "^5.12.0"
mypy = "^1.6.1"
flake8 = "^6.1.0"
pylint = "^3.0.2"
autoflake = "^2.2.1"

# Testing
pytest = "^7.4.2"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"

# Documentação
sphinx = "^7.2.6"
sphinx-rtd-theme = "^1.3.0"

# Performance e profiling
pyinstrument = "^4.6.0"
memory-profiler = "^0.61.0"

# Segurança
bandit = "^1.7.5"
safety = "^2.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "--cov=src --cov-report=term-missing"
asyncio_mode = "auto"